# sentinel-ml

./: .dockerignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
src/: metrics.py  server.py
src/data/: feature_extractor.py  generator.py  ucf_crime.py
src/llm/: reporter.py
src/models/: pytorch_model.py  sklearn_model.py
static/: app.js  index.html  style.css
